@@ -1,3 +1,8 @@
+2001-07-04  Hans Petter Jansson  <hpj@ximian.com>
+
+	* rhprinterdb2xstxml.pl: Added script to translate the RH printerdb to
+	  XML.
+
 2001-07-04  Tambet Ingo  <tambet@ximian.com>
 
 	* x.pl.in (x_add_keyword): Quote new values if neccesary.
